--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<!DOCKTYPE html>
+<!DOCTYPE html>
 <html>
-
+<head>
+    <title>About Me</title>
+  </head>
+  <header>
+    <nav>
+      <ul>
+        <a href="./index.html"><li>Home</li></a>
+                 <a href="./aboutme.html"><li>About Me</li></a>
+                                         </ul>
+                                         </nav>
+                                         </header>
 </html>
