--- a/aboutme.html
+++ b/aboutme.html
@@ -13,7 +13,15 @@
                                          </header>
                                          <body>
                                          <h1>About Me</h1>
-                                         <p> THIS IS WHERE YOU PUT YOUR ABOUT ME FORM OUR PREVIOUS ASSIGNMENT</p>
+                                         <p>I'm trying to work toward becoming a traveling nurse in my professional life and as my personal life and thing that could led up to that is learning how to do many things like CPR and if I fail I'm always going to push forward .
+
+I'm trying to work to these goals are by not giving up on something that I failed on and study hard to become one of the best persons that  I can be and lessen to the teacher when he or she is talking.
+
+The values that is most necessary for the is job or success is that I need to be very smart  in my studies and know how to become a boss of myself  and to become a leader  for other people not just for self.
+
+I would hope that I would become the top of my class and become a pro baseball player and to pass highs school with everyone else in my class and to become fit ass possible when I'm done with high school.
+
+I want to be know for is that i was a very smart person and very kind ,funny , and talent  person and very know for helping ng people when they most need in my school and trough out my life.</p>
                                          </body>
                                          <footer>
                                          </footer>
