--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
   <header>
     <nav>
       <ul>
-        <a href="./index.html><li>Home</li></a>
+        <a href="./index.html"><li>Home</li></a>
                  <a href="./aboutme.html"><li>About Me</li></a>
                                          </ul>
                                          </nav>
