--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <nav>
       <ul>
         <a href="./index.html"><li>Home</li></a>
-                 <a href="./aboutme.html"><li>About Me</li></a>
+        <a href="./myresume.pdf" target="_blank"><li>My Resume</il></a>
+        <a href="./aboutme.html"><li>About Me</li></a>
                                          </ul>
                                          </nav>
                                          </header>
